--- a/Amazon_Disney_Movies_TV_Show_Recommendation_System.ipynb
+++ b/Amazon_Disney_Movies_TV_Show_Recommendation_System.ipynb
@@ -15,7 +15,7 @@
         "tags": []
       },
       "source": [
-        "# Netflix Movies Recommendation System using Content Based Filtering\n",
+        "# Amazon Prime and Disney+ Movies Recommendation System using Content Based Filtering\n",
         "\n",
         "\n"
       ]
